# cpp-project-template

./: .bazelrc  .gitignore  .gitmodules  BUILD  CMakeLists.txt  LICENSE  MODULE.bazel  README.md  bazel_build.sh  bazel_run.sh  bazel_test.sh  build.sh  cmake_build.sh  cmake_run.sh  cmake_test.sh  hello.h  main.cpp
.clwb/: .bazelproject
.devcontainer/: Dockerfile  devcontainer.json
src/: hello.cpp  hello_test.cpp
